<resources>
    <string name="app_name">UniPhoto</string>
    <string name="preview">Camera Preview</string>
    <string name="main_my_gallery">Моя галерея</string>
    <string name="main_all_pictures">Все изображения</string>
    <string name="gallery_photo">Галерея</string>
    <string name="camera_accept">Готово</string>
    <string name="camera_decline">Переснять</string>
    <string name="ready_photo_social_networks"><u>социальных сетях</u></string>
    <string name="ready_photo_share">Или \n\n поделиться в</string>
    <string name="ready_photo_save">Сохранить</string>
    <string name="ready_photo_to_main">на главную</string>
    <string name="login_username">Имя пользователя</string>
    <string name="login_email">Email</string>
    <string name="login_password">Пароль</string>
    <string name="login_signup">Зарегистрироваться</string>
    <string name="login_enter">Вход</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_signin">Войти</string>
    <string name="login_invalid_email_value">Неверный формат email</string>
    <string name="login_invalid_password_value">Слабый пароль</string>
    <string name="login_requared_field">Обязательное поле</string>
    <string name="error_timeout">Превышено время ожидания</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="trial_to_main">К приложению</string>
    <string name="trial_timeout_title">Упс...</string>
    <string name="trial_to_login">К регистрации</string>
    <string name="trial_days">дней</string>
    <string name="trial_time_out_subtitle">К сожалению, пробный период использования приложения истек. \n Приобретите подписку, чтобы продолжить использование.</string>
    <string name="trial_time_left_subtitle">осталось до окончания пробного периода использования приложения. \n Приобретите подписку, чтобы продолжить использование после его истечения.</string>
    <string name="trial_on_connection_error">Что-то пошло не так. Проверьте подключение к сети.</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_photo">Камера</string>
    <string name="menu_gallery">Галерея</string>
    <string name="trial_try_again">Попробовать снова</string>
    <string name="profile_logout">Выйти</string>
</resources>
